force-app/main/default/objects/Lead/fields/Categorie_produs__c.field-meta.xml
<CustomField>
    <fullName>Categorie_produs__c</fullName>
    <label>Categorie produs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lavabile</fullName>
            </value>
            <value>
                <fullName>Termosistem</fullName>
            </value>
            <value>
                <fullName>Hidroizolatii</fullName>
            </value>
            <value>
                <fullName>Lacuri si emailuri</fullName>
            </value>
            <value>
                <fullName>Mortare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>