force-app/main/default/objects/Lead/fields/Data_vizita__c.field-meta.xml
<CustomField>
    <fullName>Data_vizita__c</fullName>
    <label>Data vizita</label>
    <type>Date</type>
</CustomField>