force-app/main/default/objects/Lead/fields/Descriere__c.field-meta.xml
<CustomField>
    <fullName>Descriere__c</fullName>
    <label>Descriere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>