force-app/main/default/objects/Lead/fields/Motiv_pierdere__c.field-meta.xml
<CustomField>
    <fullName>Motiv_pierdere__c</fullName>
    <label>Motiv pierdere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>