force-app/main/default/objects/Lead/fields/Nume_companie__c.field-meta.xml
<CustomField>
    <fullName>Nume_companie__c</fullName>
    <label>Nume companie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>