force-app/main/default/objects/Lead/fields/Prioritate__c.field-meta.xml
<CustomField>
    <fullName>Prioritate__c</fullName>
    <label>Prioritate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Mediu</fullName>
            </value>
            <value>
                <fullName>Automat</fullName>
            </value>
            <value>
                <fullName>Neinceput</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>