force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nou</fullName>
            </value>
            <value>
                <fullName>Contactat</fullName>
            </value>
            <value>
                <fullName>Convertit</fullName>
            </value>
            <value>
                <fullName>Pierdut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>