force-app/main/default/objects/Lead/fields/Sursa__c.field-meta.xml
<CustomField>
    <fullName>Sursa__c</fullName>
    <label>Sursa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baza de date externa</fullName>
            </value>
            <value>
                <fullName>Recomandari</fullName>
            </value>
            <value>
                <fullName>Teren</fullName>
            </value>
            <value>
                <fullName>Surse media</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>