force-app/main/default/objects/Lead/fields/Tip_constructie__c.field-meta.xml
<CustomField>
    <fullName>Tip_constructie__c</fullName>
    <label>Tip constructie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rezidential</fullName>
            </value>
            <value>
                <fullName>Reabilitare</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Altele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>